Bug 563487.  removeEventListener on a Window shouldn't throw if there's not listener manager yet; just do nothing. r=smaug